# waybill

./: .gitignore  AGENTS.md  INSTALL.md  MANIFEST.in  QUICKSTART.md  README.md  TESTING.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/skills/handoff/: SKILL.md
.github/workflows/: publish-pypi.yml
adapters/claude-code/: README.md
adapters/claude-code/commands/: handoff-export.md  handoff-import.md
adapters/codex/: README.md
adapters/codex/.codex-plugin/: plugin.json
adapters/codex/skills/handoff/: SKILL.md
adapters/cursor/: README.md
adapters/cursor/rules/: handoff.mdc
adapters/gemini-cli/: README.md
adapters/opencode/: README.md
adapters/opencode/skills/waybill/: SKILL.md
cli/: waybill
examples/claude-to-codex/: WAYBILL.md  diff.patch  metadata.json  test-summary.md
examples/codex-to-claude/: WAYBILL.md  diff.patch  metadata.json  test-summary.md
examples/failed-test-handoff/: WAYBILL.md  diff.patch  metadata.json  test-summary.md
scripts/: smoke-agents.sh  validate-waybill.py
spec/: metadata.schema.json  waybill-bundle.md  waybill-template.md
waybill_core/: __init__.py  cli.py  doctor.py  install.py  limits.py  packing.py  preflight.py  readiness.py  redaction.py  rendering.py  repo.py  scaffold.py  sharing.py  validation.py
waybill_core/template-files/.claude/skills/waybill/: SKILL.md
waybill_core/template-files/.cursor/rules/: waybill.mdc
waybill_core/template-files/.gemini/skills/handoff/: SKILL.md
waybill_core/template-files/.gemini/skills/waybill/: SKILL.md
waybill_core/template-files/.opencode/commands/: handoff.md  waybill.md
waybill_core/template-files/.opencode/skills/handoff/: SKILL.md
