[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-waybill"
version = "0.1.1"
description = "Portable handover bundles for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Waybill Project" }
]
keywords = [
  "agents",
  "coding-agents",
  "handoff",
  "waybill"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wardmos/waybill"
Repository = "https://github.com/wardmos/waybill"
Issues = "https://github.com/wardmos/waybill/issues"

[project.scripts]
waybill = "waybill_core.cli:main"

[tool.setuptools]
packages = ["waybill_core"]
include-package-data = true

[tool.setuptools.package-data]
waybill_core = ["templates/**"]
